[project]
name = "agents"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gradio>=5.22.0",
    "langgraph>=0.3.18",
    "openai>=1.68.2",
    "openai-agents>=0.0.15",
    "langchain-google-genai>=4.1.1",
    "python-dotenv>=1.0.1"
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]