[project]
name = "agents"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gradio>=5.22.0",
    "ipywidgets>=8.1.5",
    "langgraph>=0.3.18",
    "openai>=1.68.2",
    "openai-agents>=0.0.15",
    "langchain-google-genai>=4.1.1",
    "langchain-community>=0.3.20",
    "langchain-experimental>=0.3.4",
    "langchain-openai>=0.3.9",
    "python-dotenv>=1.0.1"
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]